--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-popover": "1.0.7",
+    "agora-rtc-sdk": "^3.6.11",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
