--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.7",
-    "validator": "^13.11.0"
+    "prom-client": "^15.1.0",
+    "response-time": "^2.3.2",
+    "validator": "^13.11.0",
+    "winston": "^3.11.0",
+    "winston-loki": "^6.0.8"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
