--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/joy": "^5.0.0-beta.32",
+    "@mui/material": "^5.15.15",
     "@radix-ui/react-popover": "1.0.7",
     "agora-rtc-sdk": "^3.6.11",
     "framer-motion": "^10.16.4",
